Added mail for password reset

--- a/views/resetpass.handlebars
+++ b/views/resetpass.handlebars
@@ -141,7 +141,7 @@ a[x-apple-data-detectors] {
       <tr>
         <td>
             <!-- Visually Hidden Preheader Text : BEGIN -->
-            <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Activar Cuenta de Usuario</div>
+            <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">RECUPERAR CONTRASEÑA</div>
             <!-- Visually Hidden Preheader Text : END -->
           <!-- Email Header : BEGIN -->
           <table cellspacing="0" cellpadding="0" width="600" class="email-container" style="background-color: #fff;">
@@ -159,7 +159,7 @@ a[x-apple-data-detectors] {
                         
                         <td width="50%" class="stack-column-center"><table cellpadding="0" cellspacing="0" width="100%">
                             <tr>
-                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: bold; mso-height-rule: exactly; color: #186A9E; padding: 10px; text-align: right;" class="center-on-narrow">ACTIVACIÓN DE CUENTA</span>
+                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: bold; mso-height-rule: exactly; color: #186A9E; padding: 10px; text-align: right;" class="center-on-narrow">RECUPERAR CONTRASEÑA</span>
                             </td>
                           </tr>
                           </table>
@@ -187,7 +187,7 @@ a[x-apple-data-detectors] {
 			</tr>
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 14px; mso-height-rule: exactly; line-height: 28px; color: #000; text-align: left; letter-spacing: .2px;">
-                    <p>Has recibido este correo porque intentaste crear una cuenta en Session Scheduler. Para activar tu cuenta presiona el siguiente link.</p>
+                    <p>Hemos recibido una petición para recuperar el acceso a tu cuenta. Presiona el botón a continuación para crear una nueva contraseña.</p>
 				</td>
             </tr>
             <tr>
@@ -196,7 +196,7 @@ a[x-apple-data-detectors] {
                     <table cellspacing="0" cellpadding="0" align="left" style="margin: auto">
 						<tr>
 							<td style="border-radius: 4px; background: #0965DF; text-align: center;" class="button-td"><a href="{{ activationLink }}" style="background: #0965DF; border: 15px solid #0965DF; padding: 0 10px;color: #ffffff; font-family: sans-serif; font-size: 16px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a" target="blank"> 
-							  <!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]-->Activar cuenta<!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--> 
+							  <!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]-->Crear Nueva Contraseña<!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--> 
 							  </a></td>
 					  	</tr>
 					</table>
@@ -205,7 +205,7 @@ a[x-apple-data-detectors] {
             </tr>
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 12px; mso-height-rule: exactly; line-height: 18px; color: #909090; text-align: left;">
-                    <p>Si el link no funciona por favor envía un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none;">soporte-plataforma@westtelco.com.mx</a> para brindarte apoyo.</p>
+                    <p>Si no hiciste esta petición, por favor envíanos un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none;">soporte-plataforma@westtelco.com.mx</a> para atender el caso.</p>
                     <p style=" padding-top: 20px;"><span style="color:#186A9E; font-size: 14px; font-weight: bold;">West Telco Zoom Session Scheduler</span></p>
                     <p style="padding-top: 20px;">Revisa las <a href="https://www.westtelco.com.mx/aviso-de-privacidad/" style="text-decoration: none;">politicas de privacidad</a>. West Telco derechos reservados, 2022.</p>
 				</td>
