--- a/views/activaruser.handlebars
+++ b/views/activaruser.handlebars
@@ -73,8 +73,8 @@ a[x-apple-data-detectors] {
         }
         .button-td:hover,
         .button-a:hover {
-            background: #186A9E !important;
-            border-color: #186A9E !important;
+            background: #f88a6f !important;
+            border-color: #f88a6f !important;
         }
 
         /* Media Queries */
@@ -159,7 +159,7 @@ a[x-apple-data-detectors] {
                         
                         <td width="50%" class="stack-column-center"><table cellpadding="0" cellspacing="0" width="100%">
                             <tr>
-                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: bold; mso-height-rule: exactly; color: #186A9E; padding: 10px; text-align: right;" class="center-on-narrow">ACTIVACIÓN DE CUENTA</span>
+                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: bold; mso-height-rule: exactly; color: #f88a6f; padding: 10px; text-align: right;" class="center-on-narrow">ACTIVACIÓN DE CUENTA</span>
                             </td>
                           </tr>
                           </table>
@@ -181,7 +181,7 @@ a[x-apple-data-detectors] {
             <table cellspacing="0" cellpadding="0" bgcolor="#ffffff" width="600" class="email-container">
             <!-- 1 Column Text : Intro -->
 			<tr>
-                <td style="padding: 20px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 16px; mso-height-rule: exactly; line-height: 19px; color: #186A9E; font-weight: 600; text-align: left;">
+                <td style="padding: 20px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 16px; mso-height-rule: exactly; line-height: 19px; color: #f88a6f; font-weight: 600; text-align: left;">
 					Atención, {{ userName }}
 				</td>
 			</tr>
@@ -195,7 +195,7 @@ a[x-apple-data-detectors] {
                     <!-- Big Button : Begin -->
                     <table cellspacing="0" cellpadding="0" align="left" style="margin: auto">
 						<tr>
-							<td style="border-radius: 4px; background: #0965DF; text-align: center;" class="button-td"><a href="{{ activationLink }}" style="background: #0965DF; border: 15px solid #0965DF; padding: 0 10px;color: #ffffff; font-family: sans-serif; font-size: 16px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a" target="blank"> 
+							<td style="border-radius: 4px; background: #ec795c; text-align: center;" class="button-td"><a href="{{ activationLink }}" style="background: #ec795c; border: 15px solid #ec795c; padding: 0 10px;color: #ffffff; font-family: sans-serif; font-size: 16px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a" target="blank"> 
 							  <!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]-->Activar cuenta<!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--> 
 							  </a></td>
 					  	</tr>
@@ -206,7 +206,7 @@ a[x-apple-data-detectors] {
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 12px; mso-height-rule: exactly; line-height: 18px; color: #909090; text-align: left;">
                     <p>Si el link no funciona por favor envía un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none;">soporte-plataforma@westtelco.com.mx</a> para brindarte apoyo.</p>
-                    <p style=" padding-top: 20px;"><span style="color:#186A9E; font-size: 14px; font-weight: bold;">West Telco Zoom Session Scheduler</span></p>
+                    <p style=" padding-top: 20px;"><span style="color:#f88a6f; font-size: 14px; font-weight: bold;">West Telco Zoom Session Scheduler</span></p>
                     <p style="padding-top: 20px;">Revisa las <a href="https://www.westtelco.com.mx/aviso-de-privacidad/" style="text-decoration: none;">politicas de privacidad</a>. West Telco derechos reservados, 2022.</p>
 				</td>
             </tr>  
