--- a/views/activaruser.handlebars
+++ b/views/activaruser.handlebars
@@ -77,6 +77,10 @@ a[x-apple-data-detectors] {
             border-color: #f88a6f !important;
         }
 
+        .ii a[href] {
+            color: #cc6348;
+        }
+
         /* Media Queries */
         @media screen and (max-width: 600px) {
 
