--- a/views/activaruser.handlebars
+++ b/views/activaruser.handlebars
@@ -209,9 +209,9 @@ a[x-apple-data-detectors] {
             </tr>
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 12px; mso-height-rule: exactly; line-height: 18px; color: #909090; text-align: left;">
-                    <p>Si el link no funciona por favor envía un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none;">soporte-plataforma@westtelco.com.mx</a> para brindarte apoyo.</p>
+                    <p>Si el link no funciona por favor envía un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none; color: #cc6348;">soporte-plataforma@westtelco.com.mx</a> para brindarte apoyo.</p>
                     <p style=" padding-top: 20px;"><span style="color:#f88a6f; font-size: 14px; font-weight: bold;">West Telco Zoom Session Scheduler</span></p>
-                    <p style="padding-top: 20px;">Revisa las <a href="https://www.westtelco.com.mx/aviso-de-privacidad/" style="text-decoration: none;">politicas de privacidad</a>. West Telco derechos reservados, 2022.</p>
+                    <p style="padding-top: 20px;">Revisa las <a href="https://www.westtelco.com.mx/aviso-de-privacidad/" style="text-decoration: none; color: #cc6348;">politicas de privacidad</a>. West Telco derechos reservados, 2022.</p>
 				</td>
             </tr>  
           </td>
