--- a/views/resetpass.handlebars
+++ b/views/resetpass.handlebars
@@ -155,7 +155,7 @@ a[x-apple-data-detectors] {
                     <tr>
                         <td width="50%" class="stack-column-center" valign="top"><table cellpadding="0" cellspacing="0" width="100%" >
                             <tr>
-                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: regular; mso-height-rule: exactly; color: #000; text-align: left; padding: 10px;" ><a href=""><img src="https://idelika.xneighbor.com/idelika-logo.png"  width="100" alt="West Telco" class="center-on-narrow"></a>
+                            <td dir="ltr" valign="top" style="font-family: sans-serif; font-size: 14px; font-weight: regular; mso-height-rule: exactly; color: #000; text-align: left; padding: 10px;" ><a href=""><img src="https://idelika.xneighbor.com/idelika-logo.png"  width="100" alt="Idelika" class="center-on-narrow"></a>
                             </td>
                           </tr>
                           </table>
@@ -209,9 +209,9 @@ a[x-apple-data-detectors] {
             </tr>
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 12px; mso-height-rule: exactly; line-height: 18px; color: #909090; text-align: left;">
-                    <p>Si no hiciste esta petición, por favor envíanos un correo a <a href="mailto:soporte-plataforma@westtelco.com.mx" style="text-decoration: none; color: #cc6348;">soporte-plataforma@westtelco.com.mx</a> para atender el caso.</p>
-                    <p style=" padding-top: 20px;"><span style="color:#f88a6f; font-size: 14px; font-weight: bold;">West Telco Zoom Session Scheduler</span></p>
-                    <p style="padding-top: 20px;">Revisa las <a href="https://www.westtelco.com.mx/aviso-de-privacidad/" style="text-decoration: none; color: #cc6348;">politicas de privacidad</a>. West Telco derechos reservados, 2022.</p>
+                    <p>Si el botón no funciona por favor envía un correo a <a href="mailto:soporte-app@idelika.com" style="text-decoration: none; color: #cc6348;">soporte-app@idelika.com</a> para brindarte apoyo.</p>
+                    <p style=" padding-top: 20px;"><span style="color:#f88a6f; font-size: 14px; font-weight: bold;">Idelika Online</span></p>
+                    <p style="padding-top: 20px;">Revisa las <a href="https://idelika.com/politicas-de-privacidad" style="text-decoration: none; color: #cc6348;">politicas de privacidad</a>. Idelika derechos reservados, 2022.</p>
 				</td>
             </tr>  
           </td>
