--- a/views/resetpass.handlebars
+++ b/views/resetpass.handlebars
@@ -191,7 +191,7 @@ a[x-apple-data-detectors] {
 			</tr>
             <tr>
                 <td style="padding: 0px 20px 20px 20px; text-align: left; font-family: sans-serif; font-size: 14px; mso-height-rule: exactly; line-height: 28px; color: #000; text-align: left; letter-spacing: .2px;">
-                    <p>Hemos recibido una petición para recuperar el acceso a tu cuenta. Presiona el botón a continuación para crear una nueva contraseña.</p>
+                    <p>Hemos recibido una petición para recuperar el acceso a tu cuenta. Presiona el botón a continuación para crear una nueva contraseña. Si no has realizado esta petición, ignora éste mensaje.</p>
 				</td>
             </tr>
             <tr>
